2008-09-06  Richard Sandiford  <rdsandiford@googlemail.com>

	* gas/mips/cfi-n64-1.s, gas/mips/cfi-n64-1.d: New test.
	* gas/mips/mips.exp: Run it.

2008-09-05  Nick Clifton  <nickc@redhat.com>

	* gas/arm/abs12.d: Update expected disassembly.
	* gas/arm/tls_vxworks.d: Likewise.
	* gas/arm/unwind_vxworks.d: Likewise.
	* gas/arm/group-reloc-alu-encoding-bad.d: Skip for vxworks
	targets.
	* gas/arm/group-reloc-alu.d: Likewise.
	* gas/arm/group-reloc-ldc-encoding-bad.d: Likewise.
	* gas/arm/group-reloc-ldc.d: Likewise.
	* gas/arm/group-reloc-ldr-encoding-bad.d: Likewise.
	* gas/arm/group-reloc-ldr.d: Likewise.
	* gas/arm/group-reloc-ldrs-encoding-bad.d: Likewise.
	* gas/arm/group-reloc-ldrs.d: Likewise.
	* gas/arm/local_function.d: Likewise.
	* gas/arm/mapshort-elf.d: Likewise.
	* gas/arm/undefined.d: Likewise.

2008-09-04  Christian Groessler  <chris@groessler.org>

	* lib/gas-defs.exp (run_dump_test): If the test expects an error,
	fail the test if gas doesn't report an error.

2008-08-28  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/intel.s: Add retf.
	* gas/i386/intel.{d,e}: Adjust.
	* gas/i386/opcode-intel.d: Replace lret with retf.

2008-08-28  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/gas/i386/opcode-suffix.d: Add suffixes to cmovXX.

2008-08-28  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/ia64/dv-raw-err.s: Add tests for cr.iib0 and cr.iib1.
	* gas/ia64/dv-waw-err.s: Likewise.
	* gas/ia64/regs.s: Likewise.

	* gas/ia64/dv-raw-err.l: Updated.
	* gas/ia64/dv-waw-err.l: Likewise.
	* gas/ia64/regs.d: Likewise.

2008-08-28  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/string-bad.{l,s}, gas/i386/string-ok.{d,e,s}: New.
	* gas/i386/i386.exp: Run new tests.

2008-08-27  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/intel.s: Add tests for fidivr.

	* gas/i386/intel.d: Updated.

2008-08-26  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/arith_mode.d: New test.
	* gas/bfin/arith_mode.s: New test.
	* gas/bfin/invalid_arith_mode.l: New test.