@@ -88,16 +88,20 @@ if { ([istarget "*-*-*elf*"]
     run_dump_test "group1b" 
     case $target_triplet in {
 	{ alpha*-*-* } { }
+	{ cr16*-*-* } { }
+	{ crx*-*-* } { }
+	{ h8300-*-* } { }
 	{ hppa*-*-* } { }
 	{ iq2000*-*-* } { }
 	{ mips*-*-* } { }
+	{ mn10200-*-* } { }
+	{ mn10300-*-* } { }
 	{ *c54x*-*-* } { }
 	default {
 	    # The next test can fail if the target does not convert fixups
 	    # against ordinary symbols into relocations against section symbols.
 	    # This is usually revealed by the error message:
 	    #  symbol `sym' required but not present
-	    setup_xfail "cr16-*-*" "h8300-*-*" "mn10300-*-*"
 	    run_dump_test redef
 	    run_dump_test equ-reloc
 	}
